[project]
name = "transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio-tools>=0.1.2",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]
