[project]
name = "transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "openai>=1.93.0",
    "python-dotenv>=1.1.1",
    "redis",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
